--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@
 # Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
 NUXT_DATABASE_URL=postgresql://user:password@localhost:5432/portfolio
 
-# GitHub OAuth Application
+# GitHub OAuth Application (nuxt-auth-utils convention)
 # Create at: https://github.com/settings/applications/new
-NUXT_GITHUB_CLIENT_ID=your_github_client_id
-NUXT_GITHUB_CLIENT_SECRET=your_github_client_secret
+NUXT_OAUTH_GITHUB_CLIENT_ID=your_github_client_id
+NUXT_OAUTH_GITHUB_CLIENT_SECRET=your_github_client_secret
 
-# Session Configuration
+# Session Configuration (min 32 characters)
 # Generate: openssl rand -hex 32
-NUXT_SESSION_SECRET=your_random_32_character_string_here
+NUXT_SESSION_PASSWORD=your_random_32_character_string_here
