--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/ui": "^4.4.0",
     "drizzle-orm": "^0.45.1",
     "nuxt": "^4.2.2",
+    "nuxt-auth-utils": "^0.5.28",
     "postgres": "^3.4.8",
     "tailwindcss": "^4.1.18"
   },
