--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# =============================================================================
+# Environment Variables for Portfolio Hub
+# =============================================================================
+# IMPORTANT: Nuxt requires the NUXT_ prefix for variables to be accessible
+# via useRuntimeConfig(). The prefix is automatically stripped at runtime.
+# Example: NUXT_DATABASE_URL -> runtimeConfig.databaseUrl
+# =============================================================================
+
 # Database Configuration (Railway PostgreSQL)
 # Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
 NUXT_DATABASE_URL=postgresql://user:password@localhost:5432/portfolio
