--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^4.2.2",
     "nuxt-auth-utils": "^0.5.28",
     "postgres": "^3.4.8",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
