--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "@iconify-json/simple-icons": "^1.2.67",
     "@nuxt/ui": "^4.4.0",
     "@octokit/rest": "^22.0.1",
+    "@vueuse/integrations": "^14.2.0",
     "drizzle-orm": "^0.45.1",
     "nuxt": "^4.2.2",
     "nuxt-auth-utils": "^0.5.28",
     "postgres": "^3.4.8",
     "sharp": "^0.34.5",
+    "sortablejs": "^1.15.6",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.12.1",
     "@types/node": "^25.0.10",
+    "@types/sortablejs": "^1.15.9",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "typescript": "^5.9.3",
