--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@iconify-json/lucide": "^1.2.86",
     "@iconify-json/simple-icons": "^1.2.67",
+    "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.4.0",
     "@octokit/rest": "^22.0.1",
     "@vueuse/integrations": "^14.2.0",
