--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,12 @@ NUXT_OAUTH_GITHUB_CLIENT_SECRET=your_github_client_secret
 # Session Configuration (min 32 characters)
 # Generate: openssl rand -hex 32
 NUXT_SESSION_PASSWORD=your_random_32_character_string_here
+
+# Sentry Error Monitoring (Optional - errors logged only when DSN is set)
+# Create project at: https://sentry.io
+NUXT_PUBLIC_SENTRY_DSN=https://your-key@your-org.ingest.sentry.io/your-project-id
+
+# Sentry Sourcemap Upload (Optional - for readable stack traces)
+SENTRY_ORG=your-sentry-org
+SENTRY_PROJECT=your-sentry-project
+SENTRY_AUTH_TOKEN=your-sentry-auth-token
